rwatch-web/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rwatch-web
  labels:
    app: rwatch-web
