rwatch-web/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rwatch-web
  namespace: rwatch-web
  labels:
    app: rwatch-web
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app: rwatch-web
